cmake_minimum_required(VERSION 3.29)
project(Leetcode C)

set(CMAKE_C_STANDARD 11)

add_executable(Leetcode 367_valid_perfect_square.c
        "69_sqrt(x).c"
        "35. Search Insert Position.c"
        27-remove_element.c
        26-remove-duplicates.c
        "28.Find the Index of the First Occurrence in a String.c"
        "1929. Concatenation of Array.c")
